# Pixelate

./: README.md  pyproject.toml  requirements.txt
benchmarks/: adjust_brightness_benchmark.py  convolve_benchmark.py  flip_horixontal_benchmark.py  invert_color_benchmark.py  resize_benchmark.py  to_grayscale_benchmark.py
pixelate/fast/: pixel_ops.py
pixelate/slow/: pixel_ops.py
pixelate/utils/: helpers.py  image_io.py
