[project]

name = "Pixelate"
version = "0.1.0"
description = "Learn image processing by building it. A NumPy-based library that exposes both naive and optimized algorithms for side-by-side understanding."
authors = [{ name = "Montasar Dridi", email = "montasardridi34@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

dependencies = [
    "numpy==2.2.0",
    "Pillow==11.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"